<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Michigan</string>
    <string name="title_section1">Actividad Reciente</string>
    <string name="title_section2">Mis Preguntas</string>
    <string name="title_section3">Mis Respuestas</string>
    <string name="title_section4">Buscar</string>
    <string name="title_section5">Perfil</string>
    <string name="title_section6">Materias</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Reputación</string>
    <string name="action_preferencias">Preferencias</string>
    <string name="action_materias">Materias</string>
    <string name="action_reputacion">Reputación</string>
    <string name="acerca_de">Acerca de...</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="profileNameTxt">Nombre</string>
    <string name="alumProf">AlumProf</string>
    <string name="profileCorreoTxt">Correo</string>
    <string name="reputacionTxtView">Reputacion</string>
    <string name="title_activity_login">Iniciar Sesión</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_registrar">Registrar</string>
    <string name="title_activity_other_user">Perfil Usuario</string>
    <string name="title_activity_new_question">Realizar pregunta</string>
    <string name="title_activity_comments">Respuestas</string>
    <string name="title_activity_acerca_de">Acerca de..</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_reputacion">Reputación</string>

</resources>
