<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_new_question"
        android:title="Nueva Pregunta"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="always"
        />
    <item android:id="@+id/action_example" android:title="@string/action_example"
        />
    <item android:id="@+id/action_acerca_de" android:title="@string/acerca_de"
        android:orderInCategory="200" app:showAsAction="never" />
    <item android:id="@+id/action_sesion" android:title="@string/iniciar_sesion"
        android:orderInCategory="300" app:showAsAction="never" />
    <item android:id="@+id/action_refresh" android:title="Refresh"
        android:orderInCategory="400" app:showAsAction="never" />

</menu>
